# acerola-jam-2024

./: Cargo.toml  README.org  README.org~  build.rs  build.rs~
shaders/old_voronoi/: fragment.glsl  geometry.glsl  geometry.glsl~  vertex.glsl  vertex.glsl~
shaders/simple/: fragment.glsl  fragment.glsl~  vertex.glsl  vertex.glsl~
src/: error.rs  error.rs~  lib.rs  lib.rs~  main.rs  maths.rs  maths.rs~  renderer.rs  voronoi.rs  voronoi.rs~
